# edge2-npu

C++/: README-zh.md  README.md
C++/densenet_ctc/: README.md  build.sh
C++/densenet_ctc/data/: class_str.txt
C++/densenet_ctc/include/: postprocess.h
C++/densenet_ctc/src/: main.cc  postprocess.cc
C++/face_recognition/: README.md  build.sh
C++/face_recognition/include/: facenet.h  retinaface.h
C++/face_recognition/src/: main.cc  retinaface.cc
C++/face_recognition_cap/: CMakeLists.txt  README.md  build.sh
C++/face_recognition_cap/include/: postprocess.h
C++/face_recognition_cap/src/: facenet.cc  main.cc  postprocess.cc  retinaface.cc
C++/facenet/: README.md  build.sh
C++/facenet/include/: postprocess.h
C++/mobilenet/: README.md  build.sh
C++/multiple_input_test/: CMakeLists.txt  build.sh
C++/object_detection+RTSP/: README.md  build.sh
C++/retinaface/: README.md  build.sh
C++/retinaface_cap/: README.md  build.sh
C++/ssd/: CMakeLists.txt  README.md  build.sh
C++/ssd/src/: ssd.cc
C++/ssd_cap/: CMakeLists.txt  README.md
C++/vgg16/: README.md  build.sh
C++/yolov5/: CMakeLists.txt  README.md
C++/yolov5_cap/: README.md  build.sh
C++/yolov7_tiny/: README.md
C++/yolov7_tiny_cap/: README.md  build.sh
C++/yolov8n/: README.md  build.sh
C++/yolov8n_cap/: CMakeLists.txt  README.md  build.sh
Python/: README-zh.md  README.md
Python/face_mask/: face_mask.py  face_mask_cap.py
Python/inceptionv3/: inceptionv3.py
Python/resnet18/: resnet18.py
Python/ssd/: ssd.py
Python/wheel/: rknn_toolkit_lite2-1.3.0-cp310-cp310-linux_aarch64.whl
(+30 files in other folders)
